--- a/style/style.css
+++ b/style/style.css
@@ -149,6 +149,6 @@ header{
    font-size: 20px;
    color: white;
    font-weight: bold;
-   background-color: #FF0000;
+   background-color: #ce1b1b;
    border-radius: 8px;
 } 
